--- a/source/styles/layout.css
+++ b/source/styles/layout.css
@@ -206,9 +206,9 @@ footer > p{
 	height: 40em;
 }
 
-#mapid 
-{ 
-	height: 100em; 
+#mapid
+{
+	height: 100em;
 }
 
 #load-image{
@@ -255,4 +255,15 @@ footer > p{
     -o-transform: rotate(-360deg);
     transform: rotate(-360deg);
   }
+}
+
+#query_header
+{
+	margin-left: 0em;
+	text-align: center;
+}
+
+#query_submit_button
+{
+	margin-top: 1em;
 }
