Added Query-range and Query-select files
Query-range and Query select files built, in preperation to have
multiple types of query selects

--- a/source/styles/format.css
+++ b/source/styles/format.css
@@ -11,12 +11,23 @@ header{
 	background-color: #25551B;
 }
 
+.user-sugg{
+	text-transform: uppercase;
+}
+
 button{
 	border: none;
 	text-decoration: bold;
 	background-color: black;
 	color: white;
 	transition: background-color .5s, color .5s, top .35s;
+}
+
+.query{
+	border-radius: 25px;
+	background-color: #5C8021;
+	color: white;
+	font-size: 2em;
 }
 
 #sub_layout{
