--- a/source/styles/layout.css
+++ b/source/styles/layout.css
@@ -30,6 +30,15 @@ h2{
 	margin-left: 5em;
 }
 
+.user-sugg{
+	display: block;
+	margin: auto;
+	margin-top: 2.2em;
+	margin-bottom: 2.2em;
+	text-align: center;
+	font-size: 2em;
+}
+
 p{
 	-webkit-margin-before: 0;
     -webkit-margin-after: 0;
@@ -75,7 +84,6 @@ p{
 	margin-left: .25em;
 	display: inline;
 }
-
 
 .nav_open{
 	top: 220px;
@@ -152,6 +160,15 @@ input[type=text]{
 
 select{
 	height: 25px;
+}
+
+.query{
+	display: block;
+	min-width: 300px;
+	height: 2em;
+	margin: auto;
+	margin-bottom: .5em;
+	padding: .5em;
 }
 
 .load-submit{
