--- a/source/styles/format.css
+++ b/source/styles/format.css
@@ -4,7 +4,7 @@
 	#25551B, #0C4301, #5C8021, #87A625, #B65300, #984907, #933621, #5e2417*/
 
 body{
-	font-family: 'Lato', sans-serif; 
+	font-family: 'Lato', sans-serif;
 }
 
 header{
@@ -58,7 +58,7 @@ h1, h3{
 
 nav{
 	background-color: #0C4301;
-	
+
 }
 
 nav > p{
@@ -115,4 +115,19 @@ footer{
 footer > p{
 
 	font-weight: bold;
+}
+
+.nav_button{
+	border-radius: 20%;
+	border: 3px solid #25551b;
+	background-color: #efe988;
+	color: #25551b;
+	font-size: 25px;
+	cursor: pointer;
+	font-weight: bolder;
+	font-family: 'Lato', sans-serif;
+}
+
+.nav_button button{
+	width: 100%;
 }
