Began Range Query Submit
Built button and ajax call to query all data from survey id's sent as a
json encoded array to a php file called query-multi-surveys.php. TODO;
implement query-multi-surveys.php and build leaflet map off of queried
furniture information

--- a/source/styles/format.css
+++ b/source/styles/format.css
@@ -124,3 +124,10 @@ footer > p{
 .nav_button button{
 	width: 100%;
 }
+
+#submit-surveys{
+	color: black;
+	background-color: #87A625;
+	font-size: 1.1em;
+}
+
