--- a/source/styles/bootstrap-transfer.css
+++ b/source/styles/bootstrap-transfer.css
@@ -34,10 +34,10 @@
 .bootstrap-transfer-container .selector-chosen h2 {
 	border: 1px solid #CCC;
 	margin: 0;
-	height: 18px;
+	height: 1.2em;
 	padding-left: 4px;
 	line-height: inherit;
-	font-size: 11px;
+	font-size: 1.2em;
 	text-align: left;
 	font-weight: normal;
 	-webkit-border-radius: 4px 4px 0 0;
@@ -49,7 +49,7 @@
 .bootstrap-transfer-container .selector-available input {
 	width: 100%;
 	margin: -1px -8px -1px;
-	height: 10px;
+	height: 1em;
 }
 
 .bootstrap-transfer-container .selector-filter {
