--- a/source/styles/layout.css
+++ b/source/styles/layout.css
@@ -117,7 +117,7 @@ main{
 	top: 196px;
 	left: 0;
 	right: 0;
-	bottom: 0;
+	bottom: 67px;
 	transition: top .25s;
 	transition-timing-function: ease-in-out;
 }
@@ -162,6 +162,7 @@ input[type=text]{
 
 select{
 	height: 25px;
+	vertical-align: super;
 }
 
 .load-submit{
@@ -192,7 +193,7 @@ footer{
 }
 
 .footd{
-	position: absolute;
+	position: fixed;
 	width: 100%;
 	height: 5%;
 	transition: width .25s;
@@ -204,7 +205,7 @@ footer{
 }
 
 footer > p{
-	margin-top: .25em;
+	margin-top: 9px;
 	text-align: center;
 
 }
@@ -269,13 +270,47 @@ footer > p{
 
 #query_header
 {
-	margin-left: 0em;
-	text-align: center;
+	display: inline;
 }
 
 #query_submit_button
 {
-	margin-top: 1em;
+	margin-left: 1em;
+	height:  40px;
+	vertical-align: super;
+	display: inline;
+}
+
+
+#survey_id_select
+{
+	margin-left: 1em;
+}
+
+#query_header_container
+{
+	display: inline;
+	margin-right: 20px;
+}
+
+#query_print_button{
+	position:  absolute;
+	right: 10px;
+	top: 20px;
+}
+
+.report_legend {
+    padding: 6px 8px;
+    font: 14px/16px Arial, Helvetica, sans-serif;
+    background: white;
+    background: rgba(255,255,255,0.8);
+    box-shadow: 0 0 15px rgba(0,0,0,0.2);
+    border-radius: 5px;
+}
+
+.report_legend h4 {
+    margin: 0 0 5px;
+    color: #777;
 }
 
 .p-inline{
