Added first legend, print text report button and peak use data
Peak use data needs more work, it is grabing the wrong info.
All these changes are for query range reporting

--- a/source/styles/format.css
+++ b/source/styles/format.css
@@ -91,7 +91,7 @@ form.layout-selector{
 fieldset{
 	border: none;
 	background-color: #87A625;
-	padding: 15px;
+	padding-right: 15px;
 }
 
 form.layout-selector > fieldset{
