Added map print function and finshed the second legend for Query range

--- a/source/styles/layout.css
+++ b/source/styles/layout.css
@@ -80,6 +80,12 @@ p{
 	z-index: 100;
 }
 
+#hide_nav_plus{
+	position: absolute;
+	top: -1px;
+	right: 10px;
+}
+
 #sub_layout{
 	height: 25px;
 	margin-left: .25em;
