--- a/source/styles/format.css
+++ b/source/styles/format.css
@@ -123,6 +123,17 @@ footer > p{
 	font-family: 'Lato', sans-serif;
 }
 
+.floor_creator_button{
+	border-radius: 25%;
+	border: 3px solid #25551b;
+	background-color: #efe988;
+	color: #25551b;
+	font-size: 25px;
+	cursor: pointer;
+	font-weight: bolder;
+	font-family: 'Lato', sans-serif;
+}
+
 .nav_button button{
 	width: 100%;
 }
