--- a/source/styles/layout.css
+++ b/source/styles/layout.css
@@ -256,6 +256,14 @@ footer > p{
 	margin: 4px;
 }
 
+.floor_creator_button{
+	display: inline;
+	width: 110px;
+	height: 100px;
+	text-align: center;
+	margin: 4px;
+}
+
 #nav_form{
 	text-align: center;
 }
