Half way done with adding new areas to a new floor plan
I have set up the file to be uploaded to the filesystem and then take the user to create areas for the floor plan at this moment, I have the user click where they want the corners of the areas to be and then when they are finished I create areavert objects for each one. Next  am going to make it so that when the user is done adding areas I will push all the verts to the DB

--- a/source/styles/format.css
+++ b/source/styles/format.css
@@ -145,3 +145,14 @@ footer > p{
 	position: absolute;
 	left: -9999px
 }
+
+.area-creator-header{
+	display: table;
+	width: 100%;
+	height: 40px;
+	background-color: #87A625;
+	/* border-bottom: 5px solid #87A625; */
+}
+
+#addAreas{
+}
