Changed logo from HSU to SpaceUse

--- a/source/styles/layout.css
+++ b/source/styles/layout.css
@@ -15,10 +15,11 @@ header{
 }
 
 .logo{
+	position: relative;
 	display: block;
-	width: 50%;
 	margin: auto;
-	margin-top: 1em;
+	top: -90%;
+	height: 250%;
 }
 
 header > h1{
